# thepeg

./: .cvsignore  .hgignore  .hgtags  AUTHORS  ChangeLog  Makefile  Makefile.am  NEWS  README  Todo  acinclude.m4  configure  configure.ac  configure.in
Analysis/: .cvsignore  AIAnalysisFactory.h  AIAxis.h  AIDataPoint.h  AIDataPointSet.h  AIDataPointSetFactory.h  AIHistogram1D.h  AIHistogram2D.h  AIHistogramFactory.h  AIManagedObject.h  AIMeasurement.h  AITree.h  AITreeFactory.h  AnalysisFactory.h  Axis.h  DataPoint.h  DataPointSet.h  DataPointSetFactory.h  DummyTree.h  DummyTreeFactory.h  FactoryBase.cc  FactoryBase.fh  FactoryBase.h  FactoryBase.icc  GraphvizPlot.cc  GraphvizPlot.h  HIHepMCFile.cc  HIHepMCFile.h  HepMC3File.cc  HepMC3File.h  HepMCFile.cc  HepMCFile.h  Hist1D.h  HistFactory.h  Histogram1D.h  Histogram2D.h  HistogramFactory.cc  HistogramFactory.fh  HistogramFactory.h  HistogramFactory.icc  (+21 more)
CLHEPWrap/: .cvsignore  CLHEP.h  GenEventConverter.cc  GenEventConverter.h  GenEventConverter.icc  HepMCConverter.h  HepMCConverter.icc  HepMCConverter.tcc  HepMCTraits.h  JamesRandom.fh  JamesRandom.h  Lorentz5Vector.fh  Lorentz5Vector.h  Lorentz5Vector.icc  LorentzRotation.cc  LorentzRotation.fh  LorentzRotation.h  LorentzRotation.icc  LorentzVector.fh  LorentzVector.h  Makefile  Makefile.am  Matrix.fh  Matrix.h  PhysicalConstants.h  RandBreitWigner.fh  RandBreitWigner.h  RandExponential.fh  RandExponential.h  RandPoisson.fh  RandPoisson.h  RandomEngine.fh  RandomEngine.h  Rotation.fh  Rotation.h  SpinHalfLorentzRotation.cc  SpinHalfLorentzRotation.h  SpinHalfLorentzRotation.icc  SpinOneLorentzRotation.fh  SpinOneLorentzRotation.h  (+5 more)
Config/: .cvsignore  Complex.h  Constants.h  Containers.cc  Containers.h  HepMCHelper.h  Makefile  Makefile.am  Makefile.common.in  PhysicalQty.h  PhysicalQtyComplex.h  PhysicalQtyOps.h  Pointers.h  TemplateTools.h  ThePEG.cc  ThePEG.h  ThePEG_Qty.h.b  Units.h  Units_checked.h  Units_unchecked.h  Unitsystem.h  algorithm.h  config.h.in  ltmain.sh  std.h
Cuts/: .cvsignore  Cuts.cc  Cuts.h  Cuts.icc  DeltaMeasureCuts.cc  DeltaMeasureCuts.h  FastJetFinder.cc  FastJetFinder.h  FuzzyTheta.cc  FuzzyTheta.h  JetCuts.cc  JetCuts.h  JetFinder.cc  JetFinder.h  JetPairRegion.cc  JetPairRegion.h  JetRegion.cc  JetRegion.h  KTClus.cc  KTClus.h  KTClus.icc  KTJetFinder.cc  KTJetFinder.h  KTRapidityCut.cc  KTRapidityCut.h  Makefile.am  MultiCutBase.cc  MultiCutBase.h  MultiCutBase.icc  MultiJetRegion.cc  MultiJetRegion.h  NJetsCut.cc  NJetsCut.h  NLOKTJetFinder.cc  NLOKTJetFinder.h  OneCutBase.cc  OneCutBase.h  OneCutBase.icc  OneJetCut.cc  OneJetCut.h  (+12 more)
Doc/: .cvsignore  MakeDocs.in  MakeDocs.in.in  Makefile  Makefile.am  h2html.in  keywords.sed  refman.conf  refman.conf.in  refman.h  reformat.pl  repository.hlp
EventRecord/: .cvsignore  Collision.cc  Collision.h  Collision.icc  Collision.tcc  ColourBase.cc  ColourBase.h  ColourBase.icc  ColourLine.cc  ColourLine.h  ColourLine.icc  ColourSinglet.cc  ColourSinglet.h  ColourSinglet.icc  Event.cc  Event.h  Event.icc  Event.tcc  EventConfig.cc  EventConfig.h  EventInfoBase.cc  EventInfoBase.h  EventInfoBase.icc  HelicityVertex.cc  HelicityVertex.h  Makefile  Makefile.am  MultiColour.cc  MultiColour.h  MultiColour.icc  Particle.cc  Particle.h  Particle.icc  Particle.tcc  ParticleTraits.h  RemnantParticle.cc  RemnantParticle.h  RemnantParticle.icc  RhoDMatrix.h  SelectorBase.h  (+19 more)
Handlers/: .cvsignore  ACDCSampler.cc  ACDCSampler.h  ACDCSampler.icc  AnalysisHandler.cc  AnalysisHandler.h  AnalysisHandler.icc  CascadeHandler.cc  CascadeHandler.h  CascadeHandler.icc  ClusterCollapser.cc  ClusterCollapser.fh  ClusterCollapser.h  ClusterCollapser.icc  CollisionHandler.cc  CollisionHandler.h  CollisionHandler.icc  CollisionHandler.xh  DecayHandler.cc  DecayHandler.h  DecayHandler.icc  DecayHandler.xh  EventHandler.cc  EventHandler.h  EventHandler.icc  EventHandler.xh  EventManipulator.cc  EventManipulator.h  EventManipulator.icc  FixedCMSLuminosity.cc  FixedCMSLuminosity.h  FixedCMSLuminosity.icc  FixedTargetLuminosity.h  FlavourGenerator.cc  FlavourGenerator.h  FlavourGenerator.icc  GaussianPtGenerator.cc  GaussianPtGenerator.h  GaussianPtGenerator.icc  HadronizationHandler.cc  (+73 more)
Helicity/: FermionSpinInfo.cc  FermionSpinInfo.fh  FermionSpinInfo.h  FermionSpinInfo.icc  HelicityDefinitions.h  HelicityFunctions.h  HelicityVertex.cc  HelicityVertex.fh  HelicityVertex.h  HelicityVertex.icc  LorentzPolarizationVector.cc  LorentzPolarizationVector.h  LorentzPolarizationVector.icc  LorentzRSSpinor.cc  LorentzRSSpinor.fh  LorentzRSSpinor.h  LorentzRSSpinor.icc  LorentzRSSpinor.tcc  LorentzRSSpinorBar.cc  LorentzRSSpinorBar.fh  LorentzRSSpinorBar.h  LorentzRSSpinorBar.icc  LorentzRSSpinorBar.tcc  LorentzRank3Tensor.cc  LorentzRank3Tensor.fh  LorentzRank3Tensor.h  LorentzRank3Tensor.tcc  LorentzSpinor.cc  LorentzSpinor.fh  LorentzSpinor.h  LorentzSpinor.icc  LorentzSpinor.tcc  LorentzSpinorBar.cc  LorentzSpinorBar.fh  LorentzSpinorBar.h  LorentzSpinorBar.icc  LorentzSpinorBar.tcc  LorentzTensor.cc  LorentzTensor.h  LorentzTensor.icc  (+31 more)
HepMC/: HepMCEventHandler.cc  HepMCEventHandler.fh  HepMCEventHandler.h  HepMCReader.cc  HepMCReader.fh  HepMCReader.h  Makefile.am
Interface/: .cvsignore  ClassDocumentation.cc  ClassDocumentation.h  ClassDocumentation.icc  Command.cc  Command.h  Command.icc  Command.tcc  Command.xh  Deleted.cc  Deleted.h  Interface.h  InterfaceBase.cc  InterfaceBase.h  InterfaceBase.icc  InterfaceBase.xh  Interfaced.cc  Interfaced.h  Interfaced.icc  InterfacedBase.cc  InterfacedBase.h  InterfacedBase.icc  InterfacedBase.xh  Makefile  Makefile.am  ParMap.cc  ParMap.fh  ParMap.h  ParMap.tcc  ParMap.xh  ParVector.cc  ParVector.h  ParVector.icc  ParVector.tcc  ParVector.xh  Parameter.cc  Parameter.h  Parameter.icc  Parameter.tcc  Parameter.xh  (+15 more)
LesHouches/: LesHouches.h  LesHouches.icc  LesHouchesEventHandler.cc  LesHouchesEventHandler.h  LesHouchesEventHandler.icc  LesHouchesFileReader.cc  LesHouchesFileReader.h  LesHouchesFileReader.icc  LesHouchesReader.cc  LesHouchesReader.fh  LesHouchesReader.h  LesHouchesReader.icc  (+11 more)
(+724 files in other folders)
