if JAVAGUI
  JAVADIR = java
endif

MAINDIRS = include Config Utilities Helicity Interface LesHouches CLHEPWrap \
          PDT PDF Persistency Handlers MatrixElement Pointer ACDC \
          StandardModel Repository EventRecord lib Doc src

DIST_SUBDIRS = $(MAINDIRS) java

SUBDIRS = $(MAINDIRS) $(JAVADIR)

pkglib_SCRIPTS = libtool

