dnl Process this file with autoconf to produce a configure script.
dnl
AC_INIT(Makefile)

AC_PROGRAMS_CHECK(CXX, g++ cl KCC CC cxx xlC aCC)

AC_LANG_CPLUSPLUS
AC_PROGRAMS_CHECK(AR, ar)
if test -z "$ARFLAGS"; then
  ARFLAGS="rv "
fi
AC_PROG_RANLIB
if test -z "$CLHEPPATH"; then
  CLHEPPATH="/usr/local"
fi

if test -z "$CLHEPLIB"; then
  CLHEPLIB="CLHEP"
fi

if test -z "$CLHEPINCLUDE"; then
  CLHEPINCLUDE=-I$CLHEPPATH/include
fi

BUILDDIR=`pwd`

AC_SUBST(AR)
AC_SUBST(ARFLAGS)
AC_SUBST(RANLIB)
AC_SUBST(CLHEPPATH)
AC_SUBST(CLHEPLIB)
AC_SUBST(CLHEPINCLUDE)
AC_SUBST(prefix)
AC_SUBST(BUILDDIR)
AC_CHECK_FUNC(expm1, AC_DEFINE(ThePEG_HAS_EXPM1))
AC_CHECK_FUNC(log1p, AC_DEFINE(ThePEG_HAS_LOG1P))
echo $ac_n "checking for dlopen ""...           $ac_c" 1>&6
AC_TRY_COMPILE(
#include <dlfcn.h>
, dlopen("", 1);
, AC_DEFINE(ThePEG_HAS_DLOPEN)
echo "$ac_t""yes" 1>&6
, echo "$ac_t""no" 1>&6)
echo $ac_n "checking for <sstream> ""...        $ac_c" 1>&6
AC_TRY_COMPILE(
#include <sstream>
, std::ostringstream os;
, AC_DEFINE(ThePEG_HAS_SSTREAM)
echo "$ac_t""yes" 1>&6
, echo "$ac_t""no" 1>&6)
echo $ac_n "checking for <fpu_control> ""...    $ac_c" 1>&6
AC_TRY_COMPILE(
#include <fpu_control.h>
, fpu_control_t cw; _FPU_GETCW(cw); cw &= ~(_FPU_MASK_IM|_FPU_MASK_DM|_FPU_MASK_ZM|_FPU_MASK_OM); _FPU_SETCW(cw);
, AC_DEFINE(ThePEG_HAS_FPU_CONTROL)
echo "$ac_t""yes" 1>&6
, echo "$ac_t""no" 1>&6)

AC_CONFIG_HEADER(Config/config.h)

AC_OUTPUT(Doc/h2html Config/Makefile.common)
chmod 755 Doc/h2html
