dnl Process this file with autoconf to produce a configure script.
dnl
AC_INIT(Makefile)

AC_PROGRAMS_CHECK(CXX, g++ cl KCC CC cxx xlC aCC)

AC_LANG_CPLUSPLUS
AC_PROGRAMS_CHECK(AR, ar)
if test -z "$ARFLAGS"; then
  ARFLAGS="rv "
fi
AC_PROG_RANLIB

if test -z "$CLHEPPATH"; then
  if test "x$prefix" == "xNONE"; then
    CLHEPPATH=$ac_default_prefix
  else
    CLHEPPATH=$prefix
  fi
fi

if test -z "$CLHEPLIB"; then
  CLHEPLIB="CLHEP"
fi

if test -z "$CLHEPINCLUDE"; then
  CLHEPINCLUDE=-I$CLHEPPATH/include
fi

BUILDDIR=`pwd`

AC_SUBST(AR)
AC_SUBST(ARFLAGS)
AC_SUBST(RANLIB)
AC_SUBST(CLHEPPATH)
AC_SUBST(CLHEPLIB)
AC_SUBST(CLHEPINCLUDE)
AC_SUBST(prefix)
AC_SUBST(BUILDDIR)
AC_CHECK_FUNC(expm1, AC_DEFINE(ThePEG_HAS_EXPM1))
AC_CHECK_FUNC(log1p, AC_DEFINE(ThePEG_HAS_LOG1P))
echo $ECHO_N "checking for dlopen... $ECHO_C" 1>&6
AC_TRY_COMPILE(
#include <dlfcn.h>
, dlopen("", 1);
, AC_DEFINE(ThePEG_HAS_DLOPEN)
echo "${ECHO_T}yes" 1>&6
, echo "${ECHO_T}no" 1>&6)
echo $ECHO_N "checking for <sstream>... $ECHO_C" 1>&6
AC_TRY_COMPILE(
#include <sstream>
, std::ostringstream os;
, AC_DEFINE(ThePEG_HAS_SSTREAM)
echo "${ECHO_T}yes" 1>&6
, echo "${ECHO_T}no" 1>&6)
echo $ECHO_N "checking for <fpu_control>... $ECHO_C" 1>&6
AC_TRY_COMPILE(
#include <fpu_control.h>
, fpu_control_t cw; _FPU_GETCW(cw); cw &= ~(_FPU_MASK_IM|_FPU_MASK_DM|_FPU_MASK_ZM|_FPU_MASK_OM); _FPU_SETCW(cw);
, AC_DEFINE(ThePEG_HAS_FPU_CONTROL)
echo "${ECHO_T}yes" 1>&6
, echo "${ECHO_T}no" 1>&6)

AC_CONFIG_HEADER(Config/config.h)

AC_OUTPUT(Doc/h2html Config/Makefile.common)
chmod 755 Doc/h2html
