mySOURCES = ThePEG.cc Containers.cc

DOCFILES = ThePEG.h Constants.h Containers.h Pointers.h Units.h algorithm.h \
           std.h Complex.h

INCLUDEFILES = $(DOCFILES)

noinst_LTLIBRARIES = libThePEGConfig.la
libThePEGConfig_la_SOURCES = $(mySOURCES) $(INCLUDEFILES)

include $(top_srcdir)/Config/Makefile.aminclude

